kube/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myappdeployment
  labels:
    app: myapp
    type: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
      type: backend
  template:
    metadata:
      labels:
        app: myapp
        type: backend
    spec:
      containers:
        - name: myappcontainer
          image: us-central1-docker.pkg.dev/test-project-425614/my-docker-repo/myimage:v1
          ports:
            - containerPort: 3000
