kube/service.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp-load-balancer-service
spec:
  type: LoadBalancer
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    type: backend
    app: myapp
