kube/myapp-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
spec:
  rules:
  - host: queuelynn
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: myapp-load-balancer-service
            port:
              number: 3000
